--- a/build.properties
+++ b/build.properties
@@ -4,13 +4,14 @@ mc.version=1.12.2
 forge.version=14.23.5.2847
 mcp.version=stable_39
 
-gregtech.version=2.4.0-gcys-alpha
-gcym.version=1.1.4
+ceu.version=2.5.4
+gcym.version=4422413
 crafttweaker.version=1.12-4.1.20.554
 jei.version=4.15.0.291
 ccl.version=3.2.3.358
 chickenasm.version=1.0.2.9
 ctm.version=1.0.2.31
 top.version=1.4.23-16
+ender.version=0.5.76
 
 junit.version=4.13.1
