--- a/build.properties
+++ b/build.properties
@@ -1,11 +1,11 @@
-gcys.version=0.0.1-alpha
+gcys.version=0.0.3-fix
 
 mc.version=1.12.2
 forge.version=14.23.5.2847
 mcp.version=stable_39
 
-ceu.version=2.5.4
-gcym.version=4422413
+ceu.version=2.6.1
+gcym.version=1.2.2
 crafttweaker.version=1.12-4.1.20.554
 jei.version=4.15.0.291
 ccl.version=3.2.3.358
